# Discharge-Summary-Agent_1

./: .gitignore  CODEBASE_KNOWLEDGE.md  README.md  main.py  pyproject.toml  render.yaml  ui.html
agents/: __init__.py  discharge_agent.py
api/: app.py  ui.html
data/: sample_patient_text.txt
learning/: simulated_learning.py
models/: schemas.py
outputs/part2_final/: learning_curve.csv  part2_metrics.json
outputs/part2_smoke/: learning_curve.csv  part2_metrics.json
outputs/patient_2/: draft.md  summary.json  trace.jsonl
outputs/patient_2_full/: draft.md  summary.json  trace.jsonl
outputs/pdf_reader_type_check/: draft.md  trace.jsonl
outputs/pylance_fix_check/: draft.md  trace.jsonl
outputs/sample_patient/: draft.md  summary.json  trace.jsonl
outputs/smoke_final/: draft.md  trace.jsonl
outputs/smoke_no_ocr/: draft.md  summary.json  trace.jsonl
outputs/underline_check/: draft.md  trace.jsonl
tools/: pdf_reader.py  safety.py  trace.py
