[project]
name = "discharge-summary-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.2",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "pillow>=12.0.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "tenacity>=9.1.4",
    "uvicorn>=0.48.0",
]
